--- a/.gitattributes
+++ b/.gitattributes
@@ -11,3 +11,4 @@ supplementary_files/navigation-1.1 filter=lfs diff=lfs merge=lfs -text
 supplementary_files/bootstrap-3.3.5 filter=lfs diff=lfs merge=lfs -text
 supplementary_files/header-attrs-2.13 filter=lfs diff=lfs merge=lfs -text
 supplementary_files/highlightjs-9.12.0 filter=lfs diff=lfs merge=lfs -text
+input/media filter=lfs diff=lfs merge=lfs -text
