--- a/.gitattributes
+++ b/.gitattributes
@@ -10,5 +10,7 @@ supplementary_files/jquery-3.6.0 filter=lfs diff=lfs merge=lfs -text
 supplementary_files/navigation-1.1 filter=lfs diff=lfs merge=lfs -text
 supplementary_files/bootstrap-3.3.5 filter=lfs diff=lfs merge=lfs -text
 supplementary_files/header-attrs-2.13 filter=lfs diff=lfs merge=lfs -text
+supplementary_files/header-attrs-2.17 filter=lfs diff=lfs merge=lfs -text
 supplementary_files/highlightjs-9.12.0 filter=lfs diff=lfs merge=lfs -text
+supplementary_files/navigation-1.1/codefolding-lua.css filter=lfs diff=lfs merge=lfs -text
 input/media filter=lfs diff=lfs merge=lfs -text
